...
                            </stackView>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Old-Dt-FFD">
                                <rect key="frame" x="190" y="565" width="34" height="30"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <state key="normal" title="Save"/>
                                <connections>
                                    <action selector="saveButtonPressed:" destination="7nM-9L-P3a" eventType="touchUpInside" id="lf0-8t-Ceq"/>
...
                            </view>
                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Rectangle" translatesAutoresizingMaskIntoConstraints="NO" id="K7I-3i-1Ec">
                                <rect key="frame" x="0.0" y="131" width="375" height="647"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="647" id="e5b-hZ-Maz"/>
...
                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Altitude" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LCy-2S-o4B">
                                                                <rect key="frame" x="0.0" y="0.0" width="142.66666666666666" height="60.333333333333336"/>
                                                                <fontDescription key="fontDescription" name="Ailerons-Regular" family="Ailerons" pointSize="19"/>
                                                                <nil key="textColor"/>
                                                                <nil key="highlightedColor"/>
...
                            <constraint firstItem="w57-QL-17V" firstAttribute="trailing" secondItem="x8L-d5-F7C" secondAttribute="trailing" constant="20" id="dMS-PM-i7U"/>
                            <constraint firstItem="K7I-3i-1Ec" firstAttribute="leading" secondItem="w57-QL-17V" secondAttribute="leading" id="fuW-VL-X0T"/>
                            <constraint firstItem="w57-QL-17V" firstAttribute="bottom" secondItem="x8L-d5-F7C" secondAttribute="bottom" constant="42" id="phg-2m-cQF"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="w57-QL-17V"/>
...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Topo map" translatesAutoresizingMaskIntoConstraints="NO" id="qKS-Dv-Ib8">
                                <rect key="frame" x="0.0" y="24" width="375" height="705"/>
                            </imageView>
...
                                                                        <nil key="highlightedColor"/>
                                                                    </label>
                                                                    <label opaque="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Not Set" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cMy-XO-wfS">
                                                                        <rect key="frame" x="296" y="0.0" width="59" height="46"/>
                                                                        <gestureRecognizers/>
...
                                                                <color key="backgroundColor" red="0.4403552711" green="0.56544411179999998" blue="0.1598808467" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                                <fontDescription key="fontDescription" name="Futura-Bold" family="Futura" pointSize="20"/>
                                                                <state key="normal" title="Done">
                                                                    <color key="titleColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                                </state>
...
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="BAK-WE-yOj">
                        <rect key="frame" x="0.0" y="44" width="375" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
...
