...
                <viewController id="vAy-PK-XHG" customClass="SecondOnboardingViewController" customModule="HikingTracker" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="w35-ha-kdx">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="First, we need some information about you. " textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RFF-xe-S
                                <rect key="frame" x="50.666666666666657" y="318" width="313" height="100"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="100" id="1sf-zu-Lhy"/>
                                    <constraint firstAttribute="width" constant="313" id="401-2i-xXQ"/>
                                </constraints>
                                <fontDescription key="fontDescription" name="Oswald-Bold" family="Oswald" pointSize="24"/>
                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                                            <constraint firstAttribute="height" constant="24" id="Sxw-yl-Q42"/>
                                                        </constraints>
                                                        <fontDescription key="fontDescription" name="Oswald-Bold" family="Oswald" pointSize="17"/>
                                                        <nil key="textColor"/>
                                                        <nil key="highlightedColor"/>
                                                    </label>
                                                    <textField opaque="NO" contentMode="scaleToFill" horizontalCompressionResistancePriority="752" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter your email" textAlignment="natural" minimumFontSize="12" translatesAutoresizingMaskIntoConstraints="NO" id="q5d-ck-fqz">
                                                        <rect key="frame" x="78.666666666666657" y="0.0" width="256.66666666666674" height="24"/>
                                                        <nil key="textColor"/>
                                                        <fontDescription key="fontDescription" name="Cabin-Regular" family="Cabin" pointSize="17"/>
                                                        <textInputTraits key="textInputTraits" returnKeyType="done" textContentType="email"/>
                                                    </textField>
                                                </subviews>
...
